# 2023_1_AVGEnjoyers

./: .gitignore  CMakeLists.txt  InstallLib.sh  README.md  backend_cpp  backend_cpp_tests  db_info.txt  main.cpp  plantuml.txt
DBHelper/: DBHelper.cpp  DBHelper.h
Flat/: Flat.cpp  Flat.h
Registration/: Registration.cpp  Registration.h
Server_class/: Server.cpp  Server.h
SmartLock/: SmartLock.cpp  SmartLock.h
Tests/: DBHelperTest.cpp  FlatTest.cpp  SmartLockTest.cpp  UserTest.cpp  test_main.cpp
User/: User.cpp  User.h
database_backups/: FlatSharingDB.sql
frontend_js/: index.html
frontend_js/static/css/: style.css
frontend_js/static/js/: script_parse.js
frontend_js/templates/: auth.html  catalog.html
urls/: AbstractPage.cpp  AbstractPage.h
urls/CurrentFlatPage/: CurrentFlatPage.cpp  CurrentFlatPage.h
urls/LockStatusPage/: LockStatusPage.cpp  LockStatusPage.h
urls/RegistrationPage/: RegistrationPage.cpp  RegistrationPage.h
urls/flatList/: FlatListPage.cpp  FlatListPage.h
urls/index/: IndexPage.cpp  IndexPage.h
